--- a/pom.xml
+++ b/pom.xml
@@ -226,5 +226,11 @@
             <version>1.2.5</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+        <groupId>io.github.bonigarcia</groupId>
+        <artifactId>webdrivermanager</artifactId>
+        <version>4.4.0</version>
+        <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
